<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".help">

    <!-- TODO: Update blank fragment layout -->


    <ImageView
        android:id="@+id/img1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/location" />
    <TextView
        android:id="@+id/one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="70dp"
        android:layout_below="@id/img1"
        android:layout_centerHorizontal="true"
        android:text="@string/one_help"
        android:textColor="#000000"/>
    <TextView
        android:id="@+id/line_break"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_below="@id/one"
        android:layout_centerHorizontal="true"
        android:text="@string/line_break"
        android:textColor="#000000"/>

    <ImageView
        android:id="@+id/img2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/line_break"
        android:src="@drawable/touch" />
    <TextView
        android:id="@+id/two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/img2"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="80dp"
        android:layout_centerHorizontal="true"
        android:textColor="#000000"
        android:text="@string/notif" />


    <ImageView
        android:id="@+id/img3"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/two"
        android:src="@drawable/car" />
    <TextView
        android:id="@+id/three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/img3"
        android:layout_marginTop="8dp"
        android:layout_centerHorizontal="true"
        android:textColor="#000000"
        android:text="@string/ready_to_park" />
    <TextView
        android:id="@+id/four"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/three"
        android:layout_centerHorizontal="true"
        android:textColor="#000000"
        android:text="@string/park_now" />

</RelativeLayout>