<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/payRes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:padding="15dp"
        android:text="@string/pay"
        android:textColor="#FFFFFF"
        android:backgroundTint="#1E90FF"/>



    <RelativeLayout
        android:id="@+id/rel1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/reserve_border_white"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:elevation="5dp">
        <LinearLayout
            android:id="@+id/layout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/reserve_border"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp">
            <TextView
                android:id="@+id/destination"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/destination"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:textSize="15dp"
                android:textColor="#000000"
                android:textStyle="bold"/>

        </LinearLayout>
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/layout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            android:layout_below="@id/layout1">
            <EditText
                android:id="@+id/dateSelect"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="20dp"
                android:text="@string/dateSelect"
                android:textSize="15dp"
                android:backgroundTint="#FFA500"
                android:editable="false"
                android:focusableInTouchMode="false"/>
            <EditText
                android:id="@+id/leavDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:layout_marginRight="40dp"
                android:layout_marginLeft="20dp"
                android:text="@string/dateLeaving"
                android:textSize="15dp"
                android:textColor="#000000"
                android:backgroundTint="#FFA500"
                android:editable="false"
                android:focusableInTouchMode="false"/>
        </LinearLayout>

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/layout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/layout2">
            <EditText
                android:id="@+id/strtArriv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="center_horizontal|center_vertical"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="20dp"
                android:text="@string/strtTime"
                android:textSize="15dp"
                android:textColor="#000000"
                android:backgroundTint="#FFA500"
                android:editable="false"
                android:focusableInTouchMode="false"/>
            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/ic_arrow_forward" />
            <EditText
                android:id="@+id/endLeav"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="center_horizontal|center_vertical"
                android:layout_marginRight="40dp"
                android:layout_marginLeft="20dp"
                android:text="@string/endTime"
                android:textSize="15dp"
                android:textColor="#000000"
                android:backgroundTint="#FFA500"
                android:editable="false"
                android:focusableInTouchMode="false"/>

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/layout_duration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout2"
            android:orientation="horizontal"
            android:background="#F5F5F5"
            android:layout_marginTop="42dp">
            <TextView
                android:id="@+id/duration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="25dp"
                android:textColor="#000000"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/text_dur"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_below="@id/duration"
                android:text="@string/total_duration"
                android:textSize="15dp"
                android:textColor="#000000"/>

        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/layout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_duration"
            android:orientation="horizontal"
            android:elevation="5dp">
            <TextView
                android:id="@+id/price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="25dp"
                android:textColor="#000000"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/text_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_below="@id/price"
                android:text="@string/total_price"
                android:textSize="15dp"
                android:textColor="#000000"/>

        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rel2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rel1"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/reserve_border_blue"
        android:elevation="5dp">
        <RelativeLayout
            android:id="@+id/layout5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/reserve_border_vehreg"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp">
            <TextView
                android:id="@+id/vehicleDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/vehicle"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:textSize="15dp"
                android:textColor="#FFFFFF"
                android:textStyle="bold"/>

        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/layout6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout5"
            android:paddingBottom="10dp"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp">
            <EditText
                android:id="@+id/vehReg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:padding="2dp"
                android:background="#F8F8FF"
                android:textSize="15dp"
                android:hint="  Number Plate" />

        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rel2"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/reserve_border_white"
        android:elevation="5dp">
        <LinearLayout
            android:id="@+id/layout7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/reserve_border"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp">
            <TextView
                android:id="@+id/paymentDetails"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/payment"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:textSize="15dp"
                android:textColor="#000000"
                android:textStyle="bold"/>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/layout8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout7"
            android:orientation="horizontal"
            android:background="@drawable/reserve_border_white"
            android:elevation="2dp">
            <TextView
                android:id="@+id/blank"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>
        </LinearLayout>

    </RelativeLayout>
</RelativeLayout>


